# moderncmake

./: .gitignore  LICENSE  README.md  fizzbuzz.cmake
sample01/: CMakeLists.txt  Readme.md
sample01/src/: main.cpp  make_greeting.cpp
sample02/: CMakeLists.txt  Readme.md
sample02/fareweller/: CMakeLists.txt
sample02/fareweller/include/fareweller/: config.h  make_farewell.h
sample02/fareweller/src/: make_farewell.cpp
sample02/fareweller/tests/: fareweller_test.cpp
sample02/greeter/: CMakeLists.txt
sample02/greeter/include/greeter/: config.h
sample02/greeter/src/: localheader.h  make_greeting.cpp
sample02/greeter/tests/: greeter_test.cpp
sample02/headers/: sample.h
sample02/src/: main.cpp
sample03/: CMakeLists.txt  main.cpp
sample03/include/sample/: make_greeting.h
sample03/src/: main.cpp  make_greeting.cpp
sample04/: CMakeLists.txt
sample04/fareweller/: CMakeLists.txt
sample04/fareweller/include/fareweller/: make_farewell.h
sample04/greeter/: CMakeLists.txt
sample04/greeter/include/greeter/: make_greeting.h
sample05/: CMakeLists.txt
sample05/fareweller/: CMakeLists.txt
sample05/fareweller/include/fareweller/: config.h  make_farewell.h
sample05/greeter/: CMakeLists.txt
sample05/greeter/include/greeter/: config.h  make_greeting.h
sample06/: CMakeLists.txt
sample06/conversation/: main.cpp
sample06/fareweller/: CMakeLists.txt
sample06/fareweller/include/fareweller/: config.h
sample06/greeter/: CMakeLists.txt
sample06/greeter/include/greeter/: config.h
